# ImageEditing

./: CMakeLists.txt  README.md
Images/: green.tga  red.tga
src/: Main.cpp  TargaImage.cpp
test/: comp-atop.txt  comp-in.txt  comp-out.txt  comp-over.txt  comp-xor.txt  diff.txt  dither-bright.txt  dither-cluster.txt  dither-color.txt  dither-fs.txt  dither-pattern.txt  dither-rand.txt  dither-thresh.txt  double.txt  filter-bartlett.txt  filter-box.txt  filter-edge.txt  filter-enhance.txt  filter-gauss-n.txt  filter-gauss.txt  gray.txt  half.txt  npr-paint.txt  quant-pop.txt  quant-unif.txt  rotate.txt  scale.txt
